packages/evelyn-ci/modules/portus/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nginx-portus
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`portus.evelyn.internal`)
    services:
    - name: nginx
      port: 443
      terminationDelay: 400
      weight: 10
  tls:
    domains:
      - main: portus.evelyn.internal
    passthrough: true
